[B]3.0.10~nightly23[/B]
- höhere Treffergenauigkeit für Netflix, Netzkino und Watchbox
- Watchbox und Netzkino als Premium markiert
- weniger Seiten Anfragen dank Nutzung von Justwatch

[B]3.0.10~nightly22[/B]
- Info-Popup nach Update / Erstinstallation BUGFIX

[B]3.0.10~nightly21[/B]
- Info-Popup nach Update / Erstinstallation

[B]3.0.10~nightly20[/B]
- Watchbox Encoding Fix

[B]3.0.10~nightly19[/B]
- Artwork-Bugfix

[B]3.0.10~nightly18[/B]
- Gitignore sinnvoll erweitert
- Textanpassungen (Schreibweise, Sprachliches, Formatierung)
- Hinweis zur notwendigen erneuten Autorisierung von Trakt.tv hinzugefügt.
- thumbs.db entfernt

[B]3.0.10~nightly17[/B]
- Neu: Watchbox

[B]3.0.10~nightly16[/B]
- Fix SD-Autoplay Filter

[B]3.0.10~nightly15[/B]
- Doppelter Verfügbarkeits-Check für Netflix

[B]3.0.10~nightly14[/B]
- Kontextmenü-Einträge lassen sich nun unter Einstellungen/Allgemein verwalten.
- Bugfixes Nightly 13
- Vereinheitlichung
- Zufallswiedergabe entfernt

[B]3.0.10~nightly13[/B]
-  Fanart/Poster Quelle Auswahlmöglichkeit hinzugefügt (control.py, movies.py, lastship.py, metacache.py):
     Es ist bei Filmen nach der Suche möglich, über das Kontexmenü die Fanart/Poster Quelle zu ändern
     Ist bei der gewählten Quelle nichts verfügbar, so wird kein Icon angezeigt

[B]3.0.10~nightly12[/B]
- Fix View Typ (Ansichten werden nun auch auf den Folgeseiten korrekt angezeigt)

[B]3.0.10~nightly11[/B]
- Fix Trakt Bugfix (Benutzerauthorisierung wird nicht angezeigt)
    Der Trakt Benutzer wird nun korrekt angezeigt.
    ACHTUNG: ES IST ZWINGEND NOTWENDIG DASS JEDER BENUTZER TRAKT NEU AUTORISIERT! WIRD DIES NICHT GEMACHT WERDEN EINIGE TRAKT-OPTIONEN FEHLERHAFT SEIN!

[B]3.0.10~nightly10[/B]
 - New Indexpage: Movie-stream.eu

[B]3.0.10~nightly9[/B]
- Changed Vodster Key (for Netflix)

[B]3.0.10~nightly8[/B]
- Fix HDKino
- Kurz FAQ im Einstellungs Menü (settings.xml)

[B]3.0.10~nightly7[/B]
- Update settings.xml
- Update Netflix

[B]3.0.10~nightly6[/B]