@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.lastship" version="3.0.10~nightly23" name="Lastship" provider-name="Lastship">
+<addon id="plugin.video.lastship" version="3.0.10~nightly24" name="Lastship" provider-name="Lastship">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="repository.lastship" version="1.0.2" />
@@ -43,6 +43,7 @@
 - Doppelter Netflix Verfuegbarkeitscheck
 - Fix SD-Autoplay Filter
 - Neu: watchbox
+- Fix Error durch Widget im Log
 		</news>
 	</extension>
 </addon>
