@@ -1199,6 +1199,18 @@ class movies:
                 item.setArt(art)
                 item.addContextMenuItems(cm)
                 item.setProperty('IsPlayable', isPlayable)
+                
+                meta.pop('fanart', None)
+                meta.pop('imdb', None)
+                meta.pop('imdb_id', None)
+                meta.pop('label', None)
+                meta.pop('thumb', None)
+                meta.pop('poster', None)
+                meta.pop('banner', None)
+                meta.pop('tvdb', None)
+                meta.pop('tvdb_id', None)
+                meta.pop('unaired', None)
+                
                 item.setInfo(type='Video', infoLabels = meta)
 
                 video_streaminfo = {'codec': 'h264'}
